# FlashSampling

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  ws.code-workspace
benchmarking/: Makefile  hbm-access.py  matmul_comparison.py  parse_ncu_sweep.py  parse_proton_intrakernel.py  plot-triton-bench.py  plot_bsz_sweep_runtime.py  plot_styles.py  profile-mem.py  runtime-comp.ipynb  triton_benchmark.py  verify-fused-impl.ipynb
benchmarking/data/: viz-kernel-breakdown.ipynb
benchmarking/vllm/: Makefile  README.md  bench-params.json  collect_results.py  judge_eval.py  nsys-bench-params.json  parse_engine_stats.py  plot_tpot.py  quick-bench-params.json
benchmarking/vllm/gpt-oss-120b/: results.txt
examples/: basic_usage.py  tensor_parallel.py
findings/: argsort-topk-complexity.md  arithmetic-intensity-decode-matmul.md  cute-dsl-fmms-kernel.md  fused-top-k-top-p-feasibility.md  gemv-kernel-for-bsz1.md  helion-autotune-per-batch-size.md  helion-barrier-single-kernel.md  helion-hl-rand-specialize-1-bug.md  helion-kernel-slow-at-large-batch-sizes.md  lm-head-configurations.md  multinomial-validation-overhead.md  ncu-speedup-analysis.md  preliminary-topk-top-benchs.md  proton-scopes-persistent-kernel.md  qwen3-8b-tpot-gap-at-high-concurrency.md  tp2-collective-overhead.md  triton-autotune-batch-size-key.md  upcasting-before-softmax.md  vllm-integration.md
findings/rtx3090-barrier-comparison/barrier/: speed-test.txt  time-distribution.csv  total-runtimes.csv
findings/rtx3090-barrier-comparison/two-stage/: speed-test.txt  time-distribution.csv  total-runtimes.csv
imgs/: baseline-vs-fmms-diagram.drawio
src/fused_mm_sampling/: __init__.py  core.py  cuda_impl.py  helion_impl.py  persistent_matmul.py  qitra.py  testing.py  tl_argsort.py  tl_fused_mm_topk.py  tl_gemv.py  tl_matmul.py  tp_info.py
src/fused_mm_sampling/bench/: matmul_comparison.py  speed_test.py  sys_metadata.py  triton_benchmark_lib.py
src/fused_mm_sampling/csrc/: fmms_kernel.cu
src/fused_mm_sampling/modal_lib/: modal_example.py  modal_matmul_comparison.py  utils.py  (+4 more)
tests/: conftest.py  generate_inputs.py  test_core.py  test_gemv.py  test_matmul.py  test_tl_argsort.py
(+125 files in other folders)
